* pltests/env.pl.in: The checked environment variable and version of the checked Perl module is added.

--- a/pltests/env.pl.in
+++ b/pltests/env.pl.in
@@ -1,6 +1,6 @@
 #!%PERL% -w
 
-# $Id: env.pl.in,v 1.2 2006-10-20 00:25:00 opengl2772 Exp $
+# $Id: env.pl.in,v 1.3 2007-04-21 14:43:25 opengl2772 Exp $
 # Copyright (C) 2006 Tadamasa Teranishi
 #               2006 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -36,6 +36,15 @@ eval 'require Text::Kakasi;';
 eval 'require Text::ChaSen;';
 eval 'require MeCab;';
 
+# for filter
+eval 'use File::Basename';
+eval 'use Archive::Zip';
+eval 'use Archive::Tar';
+eval 'use MIME::Base64';
+eval 'use MIME::QuotedPrint';
+eval 'use MP3::Info';
+eval 'use OLE::Storage_Lite';
+
 require Cwd;
 require 'pltests.pl';
 
@@ -66,35 +75,52 @@ sub maskenv($)
 }
 
 pltests::putline($LOG, "  *** starting $0");
-pltests::putline($LOG, sprintf("OS              : %s", $English::OSNAME));
-pltests::putline($LOG, sprintf("Perl            : %f", $English::PERL_VERSION));
+pltests::putline($LOG, sprintf("OS                : %s", $English::OSNAME));
+pltests::putline($LOG, sprintf("Perl              : %f", $English::PERL_VERSION));
 
 my $ver;
 eval '$ver = $NKF::VERSION;' or $ver = 'not installed';
-pltests::putline($LOG, sprintf("NKF module      : $ver"));
+pltests::putline($LOG, sprintf("NKF module        : $ver"));
 eval '$ver = $Text::Kakasi::VERSION;' or $ver = 'not installed';
-pltests::putline($LOG, sprintf("Text::Kakasi    : $ver"));
+pltests::putline($LOG, sprintf("Text::Kakasi      : $ver"));
 eval '$ver = $Text::ChaSen::VERSION;' or $ver = 'not installed';
-pltests::putline($LOG, sprintf("Text::ChaSen    : $ver"));
+pltests::putline($LOG, sprintf("Text::ChaSen      : $ver"));
 eval '$ver = $MeCab::VERSION;' or $ver = 'not installed';
-pltests::putline($LOG, sprintf("MeCab module    : $ver"));
+pltests::putline($LOG, sprintf("MeCab module      : $ver"));
 
-pltests::putline($LOG, sprintf("LANGUAGE        : %s", env('LANGUAGE')));
-pltests::putline($LOG, sprintf("LC_ALL          : %s", env('LC_ALL')));
-pltests::putline($LOG, sprintf("LC_MESSAGES     : %s", env('LC_MESSAGES')));
-pltests::putline($LOG, sprintf("LC_CTYPE        : %s", env('LC_CTYPE')));
-pltests::putline($LOG, sprintf("LANG            : %s", env('LANG')));
-pltests::putline($LOG, sprintf("PATH            : %s", maskenv('PATH')));
-pltests::putline($LOG, sprintf("HOME            : %s", env('HOME')));
-pltests::putline($LOG, sprintf("NAMAZURC        : %s", env('NAMAZURC')));
-pltests::putline($LOG, sprintf("MKNMZRC         : %s", env('MKNMZRC')));
-pltests::putline($LOG, sprintf("NAMAZULOCALEDIR : %s", env('NAMAZULOCALEDIR')));
-pltests::putline($LOG, sprintf("KANWADICTPATH   : %s", env('KANWADICTPATH')));
-pltests::putline($LOG, sprintf("ITAIJIDICTPATH  : %s", env('ITAIJIDICTPATH')));
-pltests::putline($LOG, sprintf("MECABRC         : %s", env('MECABRC')));
-pltests::putline($LOG, sprintf("pkgdatadir      : %s", env('pkgdatadir')));
-pltests::putline($LOG, sprintf("HTTP_proxy      : %s", env('HTTP_proxy')));
-pltests::putline($LOG, sprintf("HTTP_proxy_user : %s", maskenv('HTTP_proxy_user')));
-pltests::putline($LOG, sprintf("HTTP_proxy_pass : %s", maskenv('HTTP_proxy_pass')));
+eval '$ver = $File::Basename::VERSION;' or $ver = 'not installed';
+pltests::putline($LOG, sprintf("File::Basename    : $ver"));
+eval '$ver = $Archive::Zip::VERSION;' or $ver = 'not installed';
+pltests::putline($LOG, sprintf("Archive::Zip      : $ver"));
+eval '$ver = $Archive::Tar::VERSION;' or $ver = 'not installed';
+pltests::putline($LOG, sprintf("Archive::Tar      : $ver"));
+eval '$ver = $MIME::Base64::VERSION;' or $ver = 'not installed';
+pltests::putline($LOG, sprintf("MIME::Base64      : $ver"));
+eval '$ver = $MIME::QuotedPrint::VERSION;' or $ver = 'not installed';
+pltests::putline($LOG, sprintf("MIME::QuotedPrint : $ver"));
+eval '$ver = $MP3::Info::VERSION;' or $ver = 'not installed';
+pltests::putline($LOG, sprintf("MP3::Info         : $ver"));
+eval '$ver = $OLE::Storage_Lite::VERSION;' or $ver = 'not installed';
+pltests::putline($LOG, sprintf("OLE::Storage_Lite : $ver"));
+
+pltests::putline($LOG, sprintf("LANGUAGE          : %s", env('LANGUAGE')));
+pltests::putline($LOG, sprintf("LC_ALL            : %s", env('LC_ALL')));
+pltests::putline($LOG, sprintf("LC_MESSAGES       : %s", env('LC_MESSAGES')));
+pltests::putline($LOG, sprintf("LC_CTYPE          : %s", env('LC_CTYPE')));
+pltests::putline($LOG, sprintf("LC_TIME           : %s", env('LC_TIME')));
+pltests::putline($LOG, sprintf("LANG              : %s", env('LANG')));
+pltests::putline($LOG, sprintf("PATH              : %s", maskenv('PATH')));
+pltests::putline($LOG, sprintf("HOME              : %s", env('HOME')));
+pltests::putline($LOG, sprintf("TZ                : %s", env('TZ')));
+pltests::putline($LOG, sprintf("NAMAZURC          : %s", env('NAMAZURC')));
+pltests::putline($LOG, sprintf("MKNMZRC           : %s", env('MKNMZRC')));
+pltests::putline($LOG, sprintf("NAMAZULOCALEDIR   : %s", env('NAMAZULOCALEDIR')));
+pltests::putline($LOG, sprintf("KANWADICTPATH     : %s", env('KANWADICTPATH')));
+pltests::putline($LOG, sprintf("ITAIJIDICTPATH    : %s", env('ITAIJIDICTPATH')));
+pltests::putline($LOG, sprintf("MECABRC           : %s", env('MECABRC')));
+pltests::putline($LOG, sprintf("pkgdatadir        : %s", env('pkgdatadir')));
+pltests::putline($LOG, sprintf("HTTP_proxy        : %s", env('HTTP_proxy')));
+pltests::putline($LOG, sprintf("HTTP_proxy_user   : %s", maskenv('HTTP_proxy_user')));
+pltests::putline($LOG, sprintf("HTTP_proxy_pass   : %s", maskenv('HTTP_proxy_pass')));
 
 exit 0;
