--- a/pltests/env.pl.in
+++ b/pltests/env.pl.in
@@ -1,8 +1,8 @@
 #!%PERL% -w
 
-# $Id: env.pl.in,v 1.3 2007-04-21 14:43:25 opengl2772 Exp $
-# Copyright (C) 2006 Tadamasa Teranishi
-#               2006 Namazu Project All rights reserved.
+# $Id: env.pl.in,v 1.4 2007-04-25 20:19:12 opengl2772 Exp $
+# Copyright (C) 2006-2007 Tadamasa Teranishi
+#               2006-2007 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -110,8 +110,19 @@ pltests::putline($LOG, sprintf("LC_CTYPE          : %s", env('LC_CTYPE')));
 pltests::putline($LOG, sprintf("LC_TIME           : %s", env('LC_TIME')));
 pltests::putline($LOG, sprintf("LANG              : %s", env('LANG')));
 pltests::putline($LOG, sprintf("PATH              : %s", maskenv('PATH')));
+pltests::putline($LOG, sprintf("PATHEXT           : %s", env('PATHEXT')));
 pltests::putline($LOG, sprintf("HOME              : %s", env('HOME')));
+pltests::putline($LOG, sprintf("HOMEDRIVE         : %s", env('HOMEDRIVE')));
+pltests::putline($LOG, sprintf("HOMEPATH          : %s", maskenv('HOMEPATH')));
 pltests::putline($LOG, sprintf("TZ                : %s", env('TZ')));
+pltests::putline($LOG, sprintf("SHELL             : %s", env('SHELL')));
+pltests::putline($LOG, sprintf("ComSpec           : %s", env('ComSpec')));
+pltests::putline($LOG, sprintf("SystemDrive       : %s", env('SystemDrive')));
+pltests::putline($LOG, sprintf("TEMP              : %s", env('TEMP')));
+pltests::putline($LOG, sprintf("TMP               : %s", env('TMP')));
+pltests::putline($LOG, sprintf("USER              : %s", env('USER')));
+pltests::putline($LOG, sprintf("USERNAME          : %s", env('USERNAME')));
+pltests::putline($LOG, sprintf("USERPROFILE       : %s", env('USERPROFILE')));
 pltests::putline($LOG, sprintf("NAMAZURC          : %s", env('NAMAZURC')));
 pltests::putline($LOG, sprintf("MKNMZRC           : %s", env('MKNMZRC')));
 pltests::putline($LOG, sprintf("NAMAZULOCALEDIR   : %s", env('NAMAZULOCALEDIR')));
