--- a/scripts/mknmz.in
+++ b/scripts/mknmz.in
@@ -1,7 +1,7 @@
 #! %PERL% -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.in,v 1.180 2007-08-04 03:30:32 opengl2772 Exp $
+# $Id: mknmz.in,v 1.181 2007-08-04 07:06:03 opengl2772 Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000-2006 Namazu Project All rights reserved.
@@ -1011,13 +1011,13 @@ sub make_headfoot_pages($$) {
 
     for my $file (glob "$TEMPLATEDIR/NMZ.head*") {
         if ($file =~ m!^.*/NMZ\.head(\.[-\w\.]+)?$!){
-            my $suffix = $1;
+            my $suffix = $1 ? $1 : '';
             make_headfoot("$var::NMZ{'head'}${suffix}", $docid_count, $key_count);
         }
     }
     for my $file (glob "$TEMPLATEDIR/NMZ.foot*") {
         if ($file =~ m!^.*/NMZ\.foot(\.[-\w\.]+)?$!){
-            my $suffix = $1;
+            my $suffix = $1 ? $1 : '';
             make_headfoot("$var::NMZ{'foot'}${suffix}", $docid_count, $key_count);
         }
     }
@@ -1601,7 +1601,7 @@ sub write_nmz_files () {
 sub write_body_msg () {
     for my $file (glob "$TEMPLATEDIR/NMZ.body*") {
         if ($file =~ m!^.*/NMZ\.body(\.[-\w\.]+)?$!){
-            my $suffix = $1;
+            my $suffix = $1 ? $1 : '';
             write_message("$var::NMZ{'body'}${suffix}");
         }
     }
@@ -1611,7 +1611,7 @@ sub write_body_msg () {
 sub write_tips_msg () {
     for my $file (glob "$TEMPLATEDIR/NMZ.tips*") {
         if ($file =~ m!^.*/NMZ\.tips(\.[-\w\.]+)?$!){
-            my $suffix = $1;
+            my $suffix = $1 ? $1 : '';
             write_message("$var::NMZ{'tips'}${suffix}");
         }
     }
