* pl/conf.pl.in: Change pattern from "com[1-9]" to "com[1-9][0-9]?".

--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -61,7 +61,7 @@ $DENY_FILE = ".*\\.(gif|png|jpg|jpeg)|.*\\.tar\\.gz|core|.*\\.bak|.*~|\\..*|\x23
 #       Do NOT use `$' or `^' anchors.
 #       Case-insensitive.
 #
-$DENY_DDN = "con|aux|nul|prn|lpt[1-9]|com[1-9]|clock\$|xmsxxxx0";
+$DENY_DDN = "con|aux|nul|prn|lpt[1-9]|com[1-9][0-9]?|clock\$|xmsxxxx0";
  
 #
 # This pattern specifies PATHNAMEs which will NOT be targeted.
