--- a/scripts/mknmz.in
+++ b/scripts/mknmz.in
@@ -1,10 +1,10 @@
 #! %PERL% -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.in,v 1.182 2007-08-09 18:37:42 opengl2772 Exp $
+# $Id: mknmz.in,v 1.183 2008-04-27 18:11:06 opengl2772 Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
-# Copyright (C) 2000-2007 Namazu Project All rights reserved.
+# Copyright (C) 2000-2008 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -200,9 +200,12 @@ sub process_file ($$$$\%$$) {
 	my ($contref, $mtime, $mtype) = fetchscheme($cfile);
 	my @parts;
 	if (defined $contref) {
-	    @parts = Namazu::Archive::html::split($contref, $mtime, "NMZ.partial");
+            $file_size = length($$contref);
+            @parts = Namazu::Archive::html::split($contref, $mtime, "NMZ.partial")
+                if ($file_size <= $conf::FILE_SIZE_MAX);
 	} else {
-	    @parts = Namazu::Archive::html::splitfile($cfile, "NMZ.partial");
+            @parts = Namazu::Archive::html::splitfile($cfile, "NMZ.partial")
+                if ($file_size <= $conf::FILE_SIZE_MAX);
 	}
 	if (@parts > 1) {
 	    my $id = 0;
@@ -2535,6 +2538,7 @@ muda($conf::ON_MEMORY_MAX,
      $var::Opt{'noencodeurl'}, $conf::HTML_SUFFIX,
      $conf::META_TAGS, 
      $conf::ADDRESS, $var::MAILING_ADDRESS,
+     $conf::FILE_SIZE_MAX,
      $conf::MECAB,
      $conf::DENY_DDN,
      $var::SupportedScheme, $var::RECURSIVE_SCHEME,
