--- a/pltests/env.pl.in
+++ b/pltests/env.pl.in
@@ -1,8 +1,8 @@
 #!%PERL% -w
 
-# $Id: env.pl.in,v 1.4 2007-04-25 20:19:12 opengl2772 Exp $
-# Copyright (C) 2006-2007 Tadamasa Teranishi
-#               2006-2007 Namazu Project All rights reserved.
+# $Id: env.pl.in,v 1.5 2008-06-02 09:46:03 opengl2772 Exp $
+# Copyright (C) 2006-2008 Tadamasa Teranishi
+#               2006-2008 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -44,6 +44,8 @@ eval 'use MIME::Base64';
 eval 'use MIME::QuotedPrint';
 eval 'use MP3::Info';
 eval 'use OLE::Storage_Lite';
+eval 'use IO::Scalar';
+eval 'use IO::String';
 
 require Cwd;
 require 'pltests.pl';
@@ -102,6 +104,10 @@ eval '$ver = $MP3::Info::VERSION;' or $ver = 'not installed';
 pltests::putline($LOG, sprintf("MP3::Info         : $ver"));
 eval '$ver = $OLE::Storage_Lite::VERSION;' or $ver = 'not installed';
 pltests::putline($LOG, sprintf("OLE::Storage_Lite : $ver"));
+eval '$ver = $IO::Scalar::VERSION;' or $ver = 'not installed';
+pltests::putline($LOG, sprintf("IO::Scalar        : $ver"));
+eval '$ver = $IO::String::VERSION;' or $ver = 'not installed';
+pltests::putline($LOG, sprintf("IO::String        : $ver"));
 
 pltests::putline($LOG, sprintf("LANGUAGE          : %s", env('LANGUAGE')));
 pltests::putline($LOG, sprintf("LC_ALL            : %s", env('LC_ALL')));
