--- a/scripts/nmzegrep.in
+++ b/scripts/nmzegrep.in
@@ -4,10 +4,10 @@
 # nmzegrep - search namazu-indexed documents for a given pattern and 
 #            print lines matching the pattern.
 # 
-# $Id: nmzegrep.in,v 1.6 2006-08-12 07:26:20 opengl2772 Exp $
+# $Id: nmzegrep.in,v 1.7 2008-06-02 09:46:04 opengl2772 Exp $
 #
 # Copyright (C) 2004 Yukio USUDA All rights reserved.
-# Copyright (C) 2004 Namazu Project All rights reserved.
+# Copyright (C) 2004-2008 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -55,6 +55,7 @@ require "util.pl" || die "unable to require \"util.pl\"\n";
 require "document.pl" || die "unable to require \"document.pl\"\n";
 require "var.pl" || die "unable to require \"var.pl\"\n";
 require "conf.pl" || die "unable to require \"conf.pl\"\n";
+require "ext.pl" || die "unable to require \"ext.pl\"\n";
 
 my $tmpdir = "/tmp/NMZ$$";
 if ($English::OSNAME eq "MSWin32") {
