* pltests/env.pl.in: Version of the checked OLE::Storange_Lite::PPS, etc...

--- a/pltests/env.pl.in
+++ b/pltests/env.pl.in
@@ -1,6 +1,6 @@
 #!%PERL% -w
 
-# $Id: env.pl.in,v 1.5 2008-06-02 09:46:03 opengl2772 Exp $
+# $Id: env.pl.in,v 1.6 2008-06-10 16:46:18 opengl2772 Exp $
 # Copyright (C) 2006-2008 Tadamasa Teranishi
 #               2006-2008 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -44,6 +44,10 @@ eval 'use MIME::Base64';
 eval 'use MIME::QuotedPrint';
 eval 'use MP3::Info';
 eval 'use OLE::Storage_Lite';
+eval 'use OLE::Storage_Lite::PPS';
+eval 'use OLE::Storage_Lite::PPS::Root';
+eval 'use OLE::Storage_Lite::PPS::File';
+eval 'use OLE::Storage_Lite::PPS::Dir';
 eval 'use IO::Scalar';
 eval 'use IO::String';
 
@@ -103,7 +107,15 @@ pltests::putline($LOG, sprintf("MIME::QuotedPrint : $ver"));
 eval '$ver = $MP3::Info::VERSION;' or $ver = 'not installed';
 pltests::putline($LOG, sprintf("MP3::Info         : $ver"));
 eval '$ver = $OLE::Storage_Lite::VERSION;' or $ver = 'not installed';
-pltests::putline($LOG, sprintf("OLE::Storage_Lite : $ver"));
+pltests::putline($LOG, sprintf("OLE::Storage_Lite            : $ver"));
+eval '$ver = $OLE::Storage_Lite::PPS::VERSION;' or $ver = 'not installed';
+pltests::putline($LOG, sprintf("OLE::Storage_Lite::PPS       : $ver"));
+eval '$ver = $OLE::Storage_Lite::PPS::Root::VERSION;' or $ver = 'not installed';
+pltests::putline($LOG, sprintf("OLE::Storage_Lite::PPS::Root : $ver"));
+eval '$ver = $OLE::Storage_Lite::PPS::File::VERSION;' or $ver = 'not installed';
+pltests::putline($LOG, sprintf("OLE::Storage_Lite::PPS::File : $ver"));
+eval '$ver = $OLE::Storage_Lite::PPS::Dir::VERSION;' or $ver = 'not installed';
+pltests::putline($LOG, sprintf("OLE::Storage_Lite::PPS::Dir  : $ver"));
 eval '$ver = $IO::Scalar::VERSION;' or $ver = 'not installed';
 pltests::putline($LOG, sprintf("IO::Scalar        : $ver"));
 eval '$ver = $IO::String::VERSION;' or $ver = 'not installed';
