* pltests/env.pl.in: It was rewritten that contents of the environment variable were checked.

--- a/pltests/env.pl.in
+++ b/pltests/env.pl.in
@@ -1,6 +1,6 @@
 #!%PERL% -w
 
-# $Id: env.pl.in,v 1.6 2008-06-10 16:46:18 opengl2772 Exp $
+# $Id: env.pl.in,v 1.7 2008-06-24 08:53:43 opengl2772 Exp $
 # Copyright (C) 2006-2008 Tadamasa Teranishi
 #               2006-2008 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -54,8 +54,13 @@ eval 'use IO::String';
 require Cwd;
 require 'pltests.pl';
 
+use constant FLAG_MASK     => 0x01;
+use constant FLAG_CHECKSTR => 0x02;
+
+
 my $cwd = Cwd::cwd();
 my $LOG = "$cwd/test-log";
+my $stat = 0;
 
 sub env($)
 {
@@ -80,32 +85,64 @@ sub maskenv($)
     $mask;
 }
 
+sub printenv($$)
+{
+    my ($env, $flag) = @_;
+    my $flagCheckStr = 0;
+    my $flagMask = 0;
+    my $value;
+    my $stat = 0;
+
+
+    if (defined($flag)) {
+        $flagCheckStr = 1 if ($flag & FLAG_CHECKSTR);
+        $flagMask = 1 if ($flag & FLAG_MASK);
+    }
+
+    if ($flagCheckStr == 1) {
+        $stat = 1 if (env($env) =~ m/[^0-9A-Z\-]/gi);
+    }
+
+    if ($flagMask == 1) {
+        $value = maskenv($env);
+    } else {
+        $value = env($env);
+    }
+   
+    pltests::putline($LOG,
+        sprintf("%-21s: %s%s", $env, $value,
+        $stat == 0 ? '' : ' *** FAIL ***')
+    );
+
+    return $stat;
+}
+
 pltests::putline($LOG, "  *** starting $0");
-pltests::putline($LOG, sprintf("OS                : %s", $English::OSNAME));
-pltests::putline($LOG, sprintf("Perl              : %f", $English::PERL_VERSION));
+pltests::putline($LOG, sprintf("OSNAME               : %s", $English::OSNAME));
+pltests::putline($LOG, sprintf("Perl                 : %f", $English::PERL_VERSION));
 
 my $ver;
 eval '$ver = $NKF::VERSION;' or $ver = 'not installed';
-pltests::putline($LOG, sprintf("NKF module        : $ver"));
+pltests::putline($LOG, sprintf("NKF module           : $ver"));
 eval '$ver = $Text::Kakasi::VERSION;' or $ver = 'not installed';
-pltests::putline($LOG, sprintf("Text::Kakasi      : $ver"));
+pltests::putline($LOG, sprintf("Text::Kakasi         : $ver"));
 eval '$ver = $Text::ChaSen::VERSION;' or $ver = 'not installed';
-pltests::putline($LOG, sprintf("Text::ChaSen      : $ver"));
+pltests::putline($LOG, sprintf("Text::ChaSen         : $ver"));
 eval '$ver = $MeCab::VERSION;' or $ver = 'not installed';
-pltests::putline($LOG, sprintf("MeCab module      : $ver"));
+pltests::putline($LOG, sprintf("MeCab module         : $ver"));
 
 eval '$ver = $File::Basename::VERSION;' or $ver = 'not installed';
-pltests::putline($LOG, sprintf("File::Basename    : $ver"));
+pltests::putline($LOG, sprintf("File::Basename       : $ver"));
 eval '$ver = $Archive::Zip::VERSION;' or $ver = 'not installed';
-pltests::putline($LOG, sprintf("Archive::Zip      : $ver"));
+pltests::putline($LOG, sprintf("Archive::Zip         : $ver"));
 eval '$ver = $Archive::Tar::VERSION;' or $ver = 'not installed';
-pltests::putline($LOG, sprintf("Archive::Tar      : $ver"));
+pltests::putline($LOG, sprintf("Archive::Tar         : $ver"));
 eval '$ver = $MIME::Base64::VERSION;' or $ver = 'not installed';
-pltests::putline($LOG, sprintf("MIME::Base64      : $ver"));
+pltests::putline($LOG, sprintf("MIME::Base64         : $ver"));
 eval '$ver = $MIME::QuotedPrint::VERSION;' or $ver = 'not installed';
-pltests::putline($LOG, sprintf("MIME::QuotedPrint : $ver"));
+pltests::putline($LOG, sprintf("MIME::QuotedPrint    : $ver"));
 eval '$ver = $MP3::Info::VERSION;' or $ver = 'not installed';
-pltests::putline($LOG, sprintf("MP3::Info         : $ver"));
+pltests::putline($LOG, sprintf("MP3::Info            : $ver"));
 eval '$ver = $OLE::Storage_Lite::VERSION;' or $ver = 'not installed';
 pltests::putline($LOG, sprintf("OLE::Storage_Lite            : $ver"));
 eval '$ver = $OLE::Storage_Lite::PPS::VERSION;' or $ver = 'not installed';
@@ -117,39 +154,47 @@ pltests::putline($LOG, sprintf("OLE::Storage_Lite::PPS::File : $ver"));
 eval '$ver = $OLE::Storage_Lite::PPS::Dir::VERSION;' or $ver = 'not installed';
 pltests::putline($LOG, sprintf("OLE::Storage_Lite::PPS::Dir  : $ver"));
 eval '$ver = $IO::Scalar::VERSION;' or $ver = 'not installed';
-pltests::putline($LOG, sprintf("IO::Scalar        : $ver"));
+pltests::putline($LOG, sprintf("IO::Scalar           : $ver"));
 eval '$ver = $IO::String::VERSION;' or $ver = 'not installed';
-pltests::putline($LOG, sprintf("IO::String        : $ver"));
+pltests::putline($LOG, sprintf("IO::String           : $ver"));
 
-pltests::putline($LOG, sprintf("LANGUAGE          : %s", env('LANGUAGE')));
-pltests::putline($LOG, sprintf("LC_ALL            : %s", env('LC_ALL')));
-pltests::putline($LOG, sprintf("LC_MESSAGES       : %s", env('LC_MESSAGES')));
-pltests::putline($LOG, sprintf("LC_CTYPE          : %s", env('LC_CTYPE')));
-pltests::putline($LOG, sprintf("LC_TIME           : %s", env('LC_TIME')));
-pltests::putline($LOG, sprintf("LANG              : %s", env('LANG')));
-pltests::putline($LOG, sprintf("PATH              : %s", maskenv('PATH')));
-pltests::putline($LOG, sprintf("PATHEXT           : %s", env('PATHEXT')));
-pltests::putline($LOG, sprintf("HOME              : %s", env('HOME')));
-pltests::putline($LOG, sprintf("HOMEDRIVE         : %s", env('HOMEDRIVE')));
-pltests::putline($LOG, sprintf("HOMEPATH          : %s", maskenv('HOMEPATH')));
-pltests::putline($LOG, sprintf("TZ                : %s", env('TZ')));
-pltests::putline($LOG, sprintf("SHELL             : %s", env('SHELL')));
-pltests::putline($LOG, sprintf("ComSpec           : %s", env('ComSpec')));
-pltests::putline($LOG, sprintf("SystemDrive       : %s", env('SystemDrive')));
-pltests::putline($LOG, sprintf("TEMP              : %s", env('TEMP')));
-pltests::putline($LOG, sprintf("TMP               : %s", env('TMP')));
-pltests::putline($LOG, sprintf("USER              : %s", env('USER')));
-pltests::putline($LOG, sprintf("USERNAME          : %s", env('USERNAME')));
-pltests::putline($LOG, sprintf("USERPROFILE       : %s", env('USERPROFILE')));
-pltests::putline($LOG, sprintf("NAMAZURC          : %s", env('NAMAZURC')));
-pltests::putline($LOG, sprintf("MKNMZRC           : %s", env('MKNMZRC')));
-pltests::putline($LOG, sprintf("NAMAZULOCALEDIR   : %s", env('NAMAZULOCALEDIR')));
-pltests::putline($LOG, sprintf("KANWADICTPATH     : %s", env('KANWADICTPATH')));
-pltests::putline($LOG, sprintf("ITAIJIDICTPATH    : %s", env('ITAIJIDICTPATH')));
-pltests::putline($LOG, sprintf("MECABRC           : %s", env('MECABRC')));
-pltests::putline($LOG, sprintf("pkgdatadir        : %s", env('pkgdatadir')));
-pltests::putline($LOG, sprintf("HTTP_proxy        : %s", env('HTTP_proxy')));
-pltests::putline($LOG, sprintf("HTTP_proxy_user   : %s", maskenv('HTTP_proxy_user')));
-pltests::putline($LOG, sprintf("HTTP_proxy_pass   : %s", maskenv('HTTP_proxy_pass')));
+$stat += printenv('LANGUAGE', 0);
+$stat += printenv('LC_ALL', 0);
+$stat += printenv('LC_MESSAGES', 0);
+$stat += printenv('LC_CTYPE', 0);
+$stat += printenv('LC_TIME', 0);
+$stat += printenv('LANG', 0);
 
-exit 0;
+$stat += printenv('PATH', FLAG_MASK);
+$stat += printenv('PATHEXT', 0);
+$stat += printenv('HOME', FLAG_MASK);
+$stat += printenv('HOMEDRIVE', 0);
+$stat += printenv('HOMEPATH', FLAG_MASK);
+
+$stat += printenv('TZ', 0);
+$stat += printenv('SHELL', 0);
+$stat += printenv('ComSpec', 0);
+$stat += printenv('SystemDrive', 0);
+$stat += printenv('TEMP', FLAG_CHECKSTR);
+$stat += printenv('TMP', FLAG_CHECKSTR);
+$stat += printenv('USER', FLAG_MASK | FLAG_CHECKSTR);
+$stat += printenv('USERDOMAIN', FLAG_MASK | FLAG_CHECKSTR);
+$stat += printenv('USERNAME', FLAG_MASK);
+$stat += printenv('USERPROFILE', FLAG_MASK);
+$stat += printenv('COMPUTERNAME', FLAG_MASK | FLAG_CHECKSTR);
+$stat += printenv('LOGONSERVER', FLAG_MASK);
+$stat += printenv('OS', 0);
+$stat += printenv('PROCESSOR_IDENTIFIER', 0);
+
+$stat += printenv('NAMAZURC', 0);
+$stat += printenv('MKNMZRC', 0);
+$stat += printenv('NAMAZULOCALEDIR', 0);
+$stat += printenv('KANWADICTPATH', 0);
+$stat += printenv('ITAIJIDICTPATH', 0);
+$stat += printenv('MECABRC', 0);
+$stat += printenv('pkgdatadir', 0);
+$stat += printenv('HTTP_proxy', 0);
+$stat += printenv('HTTP_proxy_user', FLAG_MASK);
+$stat += printenv('HTTP_proxy_pass', FLAG_MASK);
+
+exit $stat;
